[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/textures/enemies/flying-head.png" type="Texture" id=1]
[ext_resource path="res://src/game/entities/enemies/flying/Flying.gd" type="Script" id=2]
[ext_resource path="res://src/game/entities/enemies/flying/states/FlyState.gd" type="Script" id=3]
[ext_resource path="res://src/game/entities/enemies/flying/states/DieState.gd" type="Script" id=4]
[ext_resource path="res://src/game/entities/enemies/FlyStateMachine.gd" type="Script" id=5]

[sub_resource type="Animation" id=103]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=106]
resource_name = "death"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54 ]
}

[sub_resource type="Animation" id=104]
resource_name = "fly"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 8.375 )

[sub_resource type="CircleShape2D" id=2]
radius = 10.4403

[node name="Flying" type="KinematicBody2D"]
light_mask = 3
collision_layer = 4
collision_mask = 16
collision/safe_margin = 3.539
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
character_path = NodePath("..")
START_STATE = NodePath("Fly")
STATES_LIST = [ NodePath("Fly"), NodePath("Die") ]

[node name="Fly" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 12
vframes = 5

[node name="BodyAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 103 )
anims/death = SubResource( 106 )
anims/fly = SubResource( 104 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -5 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, -12 )
cast_to = Vector2( 0, 0 )
collision_mask = 3

[node name="AreaDamage" type="Area2D" parent="."]
position = Vector2( 4, -12 )
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage"]
position = Vector2( -5, 6 )
shape = SubResource( 2 )

[connection signal="hit" from="." to="StateMachine" method="notify_hit"]
[connection signal="body_entered" from="AreaDamage" to="StateMachine" method="_on_AreaDamage_body_entered"]
